<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RescueLeftoversApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">MainActivity</string>
    <string name="app_title">Rescuing Leftover Cuisine</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="title_activity_pickup_menu">PickupMenuActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="firstname_hint">First Name</string>
    <string name="lastname_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone#</string>
    <string name="events_hint">Events</string>
    <string name="pickupsmade_hint">Pickups Made</string>
    <string name="pickupsmissed_hint">Pickups Missed</string>
    <string name="weight_hint">Weight</string>
    <string name="points_hint">Point</string>
    <string name="join">Join Event</string>

    <color name="grey">#aaaaaa</color>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>

    <string name="title_activity_pickup">PickupActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="enterweight_hint">How many pounds can you carry?</string>
    <string name="title_activity_ping">PingActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_real_ping">RealPingActivity</string>
    <string name="title_activity_route">RouteActivity</string>
    <string name="title_activity_check">CheckActivity</string>
    <string name="title_activity_box">BoxActivity</string>

</resources>
